# mitre-adversarial-system

./: .env.example  .gitattributes  .gitignore  README.md  mrrobot_run_output.txt  mrrobot_run_output_v2.txt  pyproject.toml
data/reports/: basic_20260425_142239.html  basic_20260425_142824.html  basic_20260425_210918.html  basic_20260501_154808.html  basic_20260501_155237.html  basic_20260502_095948.html  basic_20260502_125204.html  basic_20260502_125828.html  basic_20260502_130442.html  basic_20260502_132121.html  basic_20260502_133654.html  basic_20260502_141733.html  basic_20260502_165455.html  basic_20260503_095906.html  basic_20260503_104418.html  basic_20260503_111656.html  basic_20260503_112026.html  basic_20260503_112818.html  basic_20260503_113141.html  basic_20260504_174037.html  basic_20260504_174704.html  bpent_20260501_161104.html  log4shell_20260425_164339.html  log4shell_20260502_195230.html  log4shell_20260503_114210.html  log4shell_20260504_175523.html
docker/: docker-compose.yml
docker/attacker/: Dockerfile
docker/bpent/: Dockerfile
docker/bpent/www/: license.txt  robots.txt
docker/dc1/: Dockerfile
docker/dc1/www/: robots.txt  wp-login.php
docker/dc1/www/wp-admin/: theme-editor.php
docker/logging/: loki-config.yml  promtail-config.yml
docker/mrrobot/: Dockerfile
docker/mrrobot/www/: fsocity.dic  license.txt  wp-login.php
docs/: architecture-diagram.html  architecture.md
docs/diagrams/: 6_arquitectura_micro.md
scripts/: run_benchmark.py
src/: main.py
src/agents/attacker/: graph.py  memory.py  nodes.py  objectives.py  prompts.py  state.py  tools.py
src/agents/observer/: calibration.py  collectors.py  graph.py  memory.py  nodes.py  prompts.py  state.py
src/config/: mitre_mapping.py  settings.py
src/evaluation/: __init__.py  metrics.py
src/infrastructure/: docker_client.py  loki_client.py
src/llm/: provider.py
src/ui/: __init__.py  dashboard.py  report.py  session.py
tests/: README.md  test_e2e_mocks.py  test_memory.py  test_metrics.py  test_objectives.py  test_observer_calibration.py  test_observer_heuristics.py  test_observer_memory.py  test_optimizations.py  test_report.py  test_session.py
(+3 files in other folders)
