[tool.poetry]
name = "mitre-adversarial-system"
version = "0.1.0"
description = "Sistema adversarial de simulacion de ataques con clasificacion automatica de tacticas MITRE ATT&CK mediante agentes autonomos"
authors = ["Jesus Alarcon"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langgraph = ">=0.2"
langchain-openai = ">=0.2"
langchain-anthropic = ">=0.3"
langchain-core = ">=0.3"
langchain-google-genai = ">=2.0"
langchain-groq = ">=0.2"
langchain-cerebras = ">=0.5"
docker = ">=7.0"
httpx = ">=0.27"
pydantic-settings = ">=2.0"
rich = ">=13.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.24"
ruff = ">=0.8"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
