[tool.poetry]
name = "mitre-adversarial-system"
version = "0.1.0"
description = "Sistema adversarial de simulacion de ataques con clasificacion automatica de tacticas MITRE ATT&CK mediante agentes autonomos"
authors = ["Jesus Alarcon"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
# Versiones fijas (==) para reproducibilidad academica del entregable de tesis.
# Cualquier upgrade debe documentarse en CHANGELOG.md y revalidarse end-to-end.
python = "^3.11"
langgraph = "==1.1.10"
langchain-openai = "==0.3.34"
langchain-anthropic = "==1.4.2"
langchain-core = "==1.3.2"
langchain-google-genai = "==4.2.2"
langchain-groq = "==1.1.2"
langchain-cerebras = "==0.6.0"
anthropic = "==0.97.0"
openai = "==2.33.0"
docker = "==7.1.0"
httpx = "==0.28.1"
pydantic-settings = "==2.14.0"
rich = "==15.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "==9.0.3"
ruff = "==0.8.6"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
